<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lilinzhen.qduamapplication.HomePage.Assn.DirectorDetailActivity">
    <data>
        <variable
            name="director"
            type="com.lilinzhen.qduamapplication.Bean.Assn.Director"/>
        <variable
            name="activity"
            type="com.lilinzhen.qduamapplication.HomePage.Assn.DirectorDetailActivity"/>
    </data>
    <LinearLayout
        android:id="@+id/activity_director_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/project_body_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/one"
                android:layout_weight="@integer/fifteen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_two"
                android:text="@string/direc_depname"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/view_textview_color"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/two_hundred_and_fifty_three"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <EditText
                    android:id="@+id/et_direc_depname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="@color/view_edittext_text_color"
                    android:textSize="@dimen/fourteen"
                    android:gravity="center_vertical|right"
                    android:layout_gravity="center_vertical|right"
                    android:hint="@{director.depart.depname}"
                    android:textColorHint="@color/view_edittext_hint_color"
                    android:enabled="false"
                    android:paddingLeft="@dimen/ten"
                    android:paddingTop="@dimen/ten"
                    android:paddingBottom="@dimen/ten"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/one"
                android:layout_weight="@integer/twenty_two"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/project_body_line_background"/>
        <LinearLayout
            android:id="@+id/ll_direc_level"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_two"
            android:orientation="horizontal"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="@{activity.onClick}">
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@integer/fifteen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/direc_level"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/view_textview_color"
                android:gravity="center"/>
            <EditText
                android:id="@+id/et_direc_level"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@integer/two_hundred_and_thirty_five"
                android:background="@color/white"
                android:onClick="@{activity.onClick}"
                android:text="@={director.level}"
                android:hint="@string/select_required_hint"
                android:textColor="@color/view_edittext_text_color"
                android:textSize="@dimen/fourteen"
                android:gravity="right|center_vertical"
                android:focusable="false"
                android:editable="false"
                android:singleLine="true"
                android:textColorHint="@color/view_edittext_hint_color"
                android:paddingLeft="@dimen/ten"/>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@integer/fourty"
                android:orientation="horizontal">
                <View
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/ten"/>
                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/eight"
                    android:src="@mipmap/arrows_right" />
                <View
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/twenty_two"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/project_body_line_background"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:background="@color/project_body_line_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/one"
                android:layout_weight="@integer/fifteen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_two"
                android:text="@string/direc_name"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/view_textview_color"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/two_hundred_and_fifty_three"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <EditText
                    android:id="@+id/et_direc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@={director.name}"
                    android:textColor="@color/view_edittext_text_color"
                    android:textSize="@dimen/fourteen"
                    android:gravity="center_vertical|right"
                    android:layout_gravity="center_vertical|right"
                    android:hint="@string/input_required_hint"
                    android:textColorHint="@color/view_edittext_hint_color"
                    android:paddingLeft="@dimen/ten"
                    android:paddingTop="@dimen/ten"
                    android:paddingBottom="@dimen/ten"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/one"
                android:layout_weight="@integer/twenty_two"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/project_body_line_background"/>
        <LinearLayout
            android:id="@+id/ll_direc_sex"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_two"
            android:orientation="horizontal"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="@{activity.onClick}">
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@integer/fifteen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/direc_sex"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/view_textview_color"
                android:gravity="center"/>
            <EditText
                android:id="@+id/et_direc_sex"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@integer/two_hundred_and_thirty_five"
                android:background="@color/white"
                android:onClick="@{activity.onClick}"
                android:text="@={director.sex}"
                android:hint="@string/select_required_hint"
                android:textColor="@color/view_edittext_text_color"
                android:textSize="@dimen/fourteen"
                android:gravity="right|center_vertical"
                android:focusable="false"
                android:editable="false"
                android:singleLine="true"
                android:textColorHint="@color/view_edittext_hint_color"
                android:paddingLeft="@dimen/ten"/>

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@integer/fourty"
                android:orientation="horizontal">
                <View
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/ten"/>
                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/eight"
                    android:src="@mipmap/arrows_right" />
                <View
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/twenty_two"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/project_body_line_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/one"
                android:layout_weight="@integer/fifteen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_two"
                android:text="@string/direc_phone"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/view_textview_color"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/two_hundred_and_fifty_three"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <EditText
                    android:id="@+id/et_direc_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@={director.phone}"
                    android:textColor="@color/view_edittext_text_color"
                    android:textSize="@dimen/fourteen"
                    android:gravity="center_vertical|right"
                    android:layout_gravity="center_vertical|right"
                    android:textColorHint="@color/view_edittext_hint_color"
                    android:hint="@string/input_required_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/ten"
                    android:paddingTop="@dimen/ten"
                    android:paddingBottom="@dimen/ten"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/one"
                android:layout_weight="@integer/twenty_two"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/project_body_line_background"/>

    </LinearLayout>

</layout>

